--- a/package.json
+++ b/package.json
@@ -2,19 +2,26 @@
   "private": true,
   "type": "module",
   "devDependencies": {
+    "@types/node": "^22.15.21",
+    "tw-animate-css": "^1.3.0",
     "vite": "^5.4.19",
     "vite-plugin-ruby": "^5.1.1"
   },
   "dependencies": {
     "@inertiajs/react": "^2.0.11",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.7",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
     "@vitejs/plugin-react": "^4.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
     "typescript": "^5.8.3"
   },
